# ocp-spec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTERNAL_NEXT_STEPS.md  Makefile  README.md  ROADMAP.md  SPECIFICATION.md  build_schemas.js  build_versions.sh  package.json
.agent/: context.md
.github/workflows/: deploy.yml  docker-publish.yml  pages.yml
cli/: README.md  ocp  ocp-dev  pyproject.toml  requirements.txt
cli/src/ocp_cli/: __init__.py  main.py
cli/tests/: __init__.py  test_main.py
docs/: Makefile  generate-schema-docs.js  go.mod  go.sum  hugo.yaml  tailwind.config.js
docs/assets/css/: custom.css  ocp-badges.source.css  ocp-cards.source.css  ocp-syntax.source.css  ocp-typography.source.css  styles.css
docs/content/: _index.md
docs/content/about/: index.md
docs/content/blog/: 2026-01-03-launch.md
docs/content/community/: _index.md
docs/content/context/: _index.md  encoding.md  headers.md  schema.md
docs/content/docs/: _index.md
docs/content/docs/agent-context/: _index.md
docs/content/docs/api-registry/: _index.md
docs/content/docs/examples/: _index.md
docs/content/docs/getting-started/: _index.md
docs/content/docs/ide-integration/: _index.md  vscode.md
docs/content/docs/registry-client/: _index.md
docs/content/docs/spec/: _index.md  context-schema.md  openapi-extensions-schema.md  tool-schema.md
docs/content/docs/specification/: tool-schema.md
docs/content/docs/specs/: _index.md  context-schema.md  openapi-extensions-schema.md  tool-schema.md
docs/content/docs/tool-discovery/: _index.md
docs/content/documentation/: _index.md  learning-paths.md
docs/content/documentation/agent-context/: _index.md
docs/content/documentation/api-registry/: _index.md
docs/content/documentation/context/: _index.md  encoding.md  headers.md  schema.md
docs/content/documentation/examples/: _index.md
docs/content/documentation/getting-started/: _index.md  installation.md  learning-paths.md  quick-start.md
docs/content/documentation/http-context/: _index.md
docs/content/documentation/ide/: _index.md
docs/content/documentation/ide-integration/: _index.md
docs/content/documentation/learning-paths/: _index.md
docs/content/documentation/registry/: _index.md
docs/content/documentation/specification/: _index.md  context-schema.md  openapi-extensions-schema.md  tool-schema.md
docs/content/documentation/tool-discovery/: _index.md
docs/content/documentation/tools/: _index.md  naming-conventions.md  openapi-parsing.md  tool-generation.md
docs/content/examples/: _index.md
docs/content/getting-started/: _index.md  installation.md  learning-paths.md  quick-start.md
docs/content/ide/: _index.md
docs/content/libraries/: _index.md  javascript.md  python.md
docs/content/registry/: _index.md
docs/content/specification/: _index.md
docs/content/specification/protocol/: _index.md  compatibility.md  context-schema.md  encoding.md  http-protocol.md
docs/content/specs/: _index.md  context-schema.md  openapi-extensions-schema.md  tool-schema.md
docs/content/tools/: _index.md  naming-conventions.md  openapi-parsing.md  tool-generation.md
docs/i18n/: en.yaml
docs/layouts/_partials/: sidebar.html  toc.html
docs/layouts/docs/: single.html
docs/resources/: _index.md
docs/specification/: _index.md
docs/specification/2025-03-16/: _index.md
docs/specification/2025-03-16/architecture/: _index.md
docs/specification/2025-03-16/basic/: _index.md  lifecycle.md  messages.md  security.md  storage.md  transports.md  versioning.md
docs/specification/2025-03-16/revisions/: _index.md
docs/specification/draft/: _index.md
docs/specification/draft/basic/: _index.md  lifecycle.md  messages.md  security.md  transports.md  versioning.md
docs/static/: site.webmanifest
examples/github-api/: README.md  github_ocp.py  main.py  requirements.txt
examples/stripe-api/: README.md  main.py  requirements.txt  stripe_ocp.py
ocp-javascript/: .gitignore  .vscodeignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
ocp-javascript/src/: agent.ts  context.ts  errors.ts  headers.ts  http_client.ts  index.ts  registry.ts  schema_discovery.ts  storage.ts  validation.ts
ocp-javascript/tests/: agent.test.ts  context.test.ts  headers.test.ts  http_client.test.ts  registry.test.ts  schema_discovery.test.ts  storage.test.ts  validation.test.ts
ocp-python/: .gitignore  README.md  pyproject.toml
ocp-python/examples/: debugging_workflow.py  github_agent.py  vs_code_integration.py
ocp-python/src/ocp/: __init__.py  agent.py  cli.py  context.py  headers.py  http_client.py  registry.py  schema_discovery.py  validation.py
ocp-python/src/ocp_agent/: __init__.py  agent.py  errors.py  headers.py  http_client.py  schema_discovery.py  storage.py  validation.py
ocp-python/tests/: README.md  conftest.py  test_agent.py  test_context.py  test_headers.py  test_http_client.py  test_registry.py  test_schema_discovery.py  test_storage.py  test_validation.py
ocp-vscode/: package-lock.json  package.json
ocp-vscode/.agent/: context.md
ocp-vscode/src/: extension.ts
registry/: .gitignore  README.md  populate_sample_data.py  pyproject.toml
registry/src/ocp_registry/: models.py  service.py  validator.py
registry/src/registry/: __init__.py  database.py  main.py  models.py  service.py
registry/tests/: conftest.py  test_api.py
schema/draft/: schema.json
schemas/: ocp-context.json  ocp-openapi-extensions.json  ocp-tool.json
scripts/: README.md  build-schemas.js  generate-content.js  package.json
scripts/templates/: api-page.md.j2  authentication.md.j2  catalog.md.j2  category.md.j2  registry-index.md.j2  tool-page.md.j2
site/: go.mod  hugo.yaml
site/layouts/: index.html
spec/: QUESTIONS.md  README.md
tools/: ocp-cli
vscode-ocp/: .vscodeignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TEST_GUIDE.md  package-lock.json  package.json  tsconfig.json  vscode-ocp-0.1.0.vsix
vscode-ocp/src/: contextManager.ts  demoCommands.ts  extension.ts  httpInterceptor.ts
(+14 files in other folders)
