[tool.poetry]
name = "open-context-agent"
version = "0.1.0"
description = "Context-aware HTTP client framework for AI agents with OpenAPI integration"
authors = ["OCP Contributors"]
license = "MIT"
packages = [{include = "ocp_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
httpx = "^0.24.0"
jsonschema = "^4.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"