[tool.poetry]
name = "open-context-agent"
version = "0.1.0"
description = "Python implementation of the Open Context Protocol for AI agents"
authors = ["OCP Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/opencontextprotocol/specification/tree/main/ocp-python"
repository = "https://github.com/opencontextprotocol/specification"
documentation = "https://github.com/opencontextprotocol/specification/tree/main/ocp-python"
keywords = ["ocp", "open-context-protocol", "ai", "agent", "context", "http", "api", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "ocp_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
httpx = "^0.24.0"
jsonschema = "^4.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"