[tool.poetry]
name = "ocp-registry"
version = "0.1.0"
description = "OCP Community Registry - Searchable database of API configurations"
authors = ["OCP Contributors"]
license = "MIT"
packages = [{include = "ocp_registry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
httpx = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
open-context-agent = {path = "../ocp-python", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ocp-registry = "ocp_registry.main:main"